# road_surface_classifier

./: .gitignore  LICENSE  README.md  create_naip_on_aws_gpkg.ipynb  data_prep.ipynb  data_prep_ir.ipynb  dataset_to_gpkg.ipynb  detection_analysis.ipynb  model_inference_example.ipynb  perform_query.py  pyproject.toml  requirements.in  requirements.txt  road_surface_detection.code-workspace  run_overpass_api.sh  test_in_a_vaccum.py  test_usgs_api.ipynb  usgs_api_naip_discover.ipynb  visualize_mrf.ipynb
data_prep/: aws_naip.py  naip_fetch.py  national_map_fetch.py  national_map_fetch_naip.py  utils.py
docker/: Dockerfile  build.sh  environment.yml  requirements.txt
fancy_analysis/: color_model.onnx  road_color_analysis.ipynb
figures/: rsc_diagram.drawio
gis/: us_wkt.txt
inference/: fetch.py  inf_metrics.ipynb  mass_inference.py  mass_inference_dataset.py  pre_inference.py
label_helper/: __main__.py  basic_attr_model.py  controller.py  features_to_sqlite.py  label_attr_model.py  sqlite3_interface.py  utils.py
label_helper/ui/: RSC_LabelHelper.py  RSC_LabelHelper.ui  updateUI.sh
model/: custom_image_dataset.py  custom_model.py  data_augmentation.py  dice_bce_loss.py  export_to_onnx.py  handle_metrics.py  mcnn.py  mcnn_loss.py  patch.py  plmcnn.py  plresnet50.py  preprocess.py  road_surface_dataset.py  sample_augmentations.py  train.py
model/generate_artifacts/: confusion_matrix_handler.py  handle_metrics.py  metrics_handler.py
notebooks/: 00_create_naip_on_aws_gpkg.ipynb  00_explore_osm_surface.ipynb  01_data_prep.ipynb  02_data_prep.ipynb  02_dataset_to_gpkg.ipynb  06_segmentation.ipynb  07_model_calibration.ipynb  07_segmentation.ipynb  08_hyperparameter_tuning.ipynb  09_hierarchical_loss.ipynb  10_model_calibration.ipynb  inf_metrics.ipynb  mass_inference.py
osm/: osm_element_factory.py  osm_network.py
osm/overpass_api/: road_network.py
rsc/artifacts/: __init__.py  __main__.py  accuracy_obsc_handler.py  auc_handler.py  base.py  confusion_matrix_handler.py  obsc_compare_handler.py  samples_handler.py
rsc/common/: aws_naip.py  geometric_median.py  raster_integration.py  utils.py
rsc/inference/: fetch.py  mass_inference_dataset.py
rsc/model/: color_jitter_nohuesat.py  data_augmentation.py  dice_bce_loss.py  mcnn.py  mcnn_loss.py  plmcnn.py  sample_augmentations.py  train.py
rsc/model/generate_artifacts/: __init__.py
rsc/osm/: README.md  __init__.py  osm_element.py  osm_network.py  osm_overpass_api.py
rsc/osm/overpass_api/: __init__.py
rsc/train/: color_jitter_nohuesat.py  data_augmentation.py  dataset.py  mcnn.py  mcnn_loss.py  plmcnn.py  preprocess.py  rsc_hxe_loss.py
scripts/: evaluate.py  mass_inference.py  parse_features.py  perform_query.py  pre_inference.py  run_overpass_api.sh  sample_augmentations.py  train.py  train_optuna.py
usgs_api/: __init__.py  api_key.py  config.py  data_types.py  naip.py  request.py  response.py  scene_search.py  usgs_api_response.py
