[project]
name = "road_surface_classifer"
version = "0.9.0"
description = "Automated surface tagging of roads in OpenStreetMap"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["openstreetmap", "machine learning", "classifier"]
authors = [
  {name = "Jon Dalrymple", email = "j_dalrym2@hotmail.com" }
]
maintainers = [
  {name = "Jon Dalrymple", email = "j_dalrym2@hotmail.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: GPU :: NVIDIA CUDA :: 11",
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
# TODO: double-check these + split for rsc submodules
dependencies = [
  "boto3==1.26.104",
  "GDAL==3.2.2",
  "kornia==0.6.11",
  "matplotlib==3.4.3",
  "numpy==1.21.2",
  "pandas==1.3.3",
  "Pillow==9.5.0",
  "pytorch_lightning==2.0.1",
  "requests==2.27.1",
  "scikit_learn==1.2.2",
  "scipy==1.7.1",
  "torch==2.0.0",
  "torchvision==0.15.1",
  "tqdm==4.64.0",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/jdalrym2/road_surface_classifier"

[tool.setuptools]
packages = ["rsc"]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
